# Diff

./: CMakeLists.txt  General_Tests.txt  README.md
ResultInTex/: Result.tex
TreeDump/: TreeDump0.txt  TreeDump1.txt  TreeDump2.txt  TreeDump3.txt  TreeDump4.txt  TreeDump5.txt  TreeDump6.txt  TreeDump8.txt
include/: Diff.h  Diff_DSL.h
src/: Diff_Differentiate_Func.cpp  Diff_Dump.cpp  Diff_Errors_Func.cpp  Diff_File&Text_Func.cpp  Diff_Main.cpp  Diff_Text_Func.cpp  Diff_Tree_Func.cpp
